--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-blib*
-Makefile
-Makefile.old
-Build
-Build.bat
-_build*
-pm_to_blib*
+*.bak
 *.tar.gz
-.lwpcookies
-cover_db
-pod2htm*.tmp
+*.tmp
+*~
+blib*
+Build
+pm_to_blib*
+_build*
 TMDB-*
