--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.38
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4, CPAN::Meta::Converter version 2.120630'
+generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921'
 keywords:
   - movies
   - movie
@@ -25,12 +25,18 @@ name: TMDB
 provides:
   TMDB:
     file: lib/TMDB.pm
-    version: 0.052
+    version: 0.06
   TMDB::Collection:
     file: lib/TMDB/Collection.pm
     version: 0
+  TMDB::Company:
+    file: lib/TMDB/Company.pm
+    version: 0
   TMDB::Config:
     file: lib/TMDB/Config.pm
+    version: 0
+  TMDB::Genre:
+    file: lib/TMDB/Genre.pm
     version: 0
   TMDB::Movie:
     file: lib/TMDB/Movie.pm
@@ -57,4 +63,4 @@ resources:
   homepage: https://github.com/mithun/perl-tmdb
   license: http://dev.perl.org/licenses/
   repository: git://github.com/mithun/perl-tmdb.git
-version: 0.052
+version: 0.06
