--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   Module::Build: '0.38'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4214, CPAN::Meta::Converter version 2.150005'
+generated_by: 'Module::Build version 0.422, CPAN::Meta::Converter version 2.150010'
 keywords:
   - movies
   - movie
@@ -25,39 +25,41 @@ name: TMDB
 provides:
   TMDB:
     file: lib/TMDB.pm
-    version: v1.2.0
+    version: v1.2.1
   TMDB::Collection:
     file: lib/TMDB/Collection.pm
-    version: v1.2.0
+    version: v1.2.1
   TMDB::Company:
     file: lib/TMDB/Company.pm
-    version: v1.2.0
+    version: v1.2.1
   TMDB::Config:
     file: lib/TMDB/Config.pm
-    version: v1.2.0
+    version: v1.2.1
   TMDB::Genre:
     file: lib/TMDB/Genre.pm
-    version: v1.2.0
+    version: v1.2.1
   TMDB::Movie:
     file: lib/TMDB/Movie.pm
-    version: v1.2.0
+    version: v1.2.1
   TMDB::Person:
     file: lib/TMDB/Person.pm
-    version: v1.2.0
+    version: v1.2.1
   TMDB::Search:
     file: lib/TMDB/Search.pm
-    version: v1.2.0
+    version: v1.2.1
   TMDB::Session:
     file: lib/TMDB/Session.pm
-    version: v1.2.0
+    version: v1.2.1
   TMDB::TV:
     file: lib/TMDB/TV.pm
-    version: v1.2.0
+    version: v1.2.1
 requires:
   Encode: '0'
   HTTP::Tiny: '0.016'
+  IO::Socket::SSL: '1.56'
   JSON::MaybeXS: '0'
   Locale::Codes: '3.20'
+  Net::SSLeay: '1.49'
   Object::Tiny: '1.03'
   Params::Validate: '1.03'
   URI::Encode: '0.05'
@@ -66,5 +68,5 @@ resources:
   homepage: https://github.com/mithun/perl-tmdb
   license: http://dev.perl.org/licenses/
   repository: git://github.com/mithun/perl-tmdb.git
-version: v1.2.0
-x_serialization_backend: 'CPAN::Meta::YAML version 0.016'
+version: v1.2.1
+x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
